--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
     "require": {
         "silex/silex": "~1.3",
         "league/plates": "3.*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.7",
+        "symfony/browser-kit": "^2.7",
+        "symfony/css-selector": "^2.7"
     }
 }
