--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-sass": "^1.0.0"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sass": "^1.0.0",
+    "grunt-shell": "^1.1.2"
   }
 }
