--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,11 @@
             "": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "": "tests/"
+        }
+    },
     "require": {
         "silex/silex": "~1.3",
         "league/plates": "3.*"
