--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require-dev": {
         "phpunit/phpunit": "^4.7",
         "symfony/browser-kit": "^2.7",
-        "symfony/css-selector": "^2.7"
+        "symfony/css-selector": "^2.7",
+        "iakio/phpunit-growlprinter": "^0.2.0"
     }
 }
