--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-este-watch": "^0.1.18",
     "grunt-sass": "^1.0.0",
     "grunt-shell": "^1.1.2"
   }
