--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require": {
         "silex/silex": "~1.3",
-        "league/plates": "3.*"
+        "league/plates": "3.*",
+        "doctrine/dbal": "~2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7",
